--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -40,5 +40,7 @@ jobs:
 
       - name: SonarQube Scan
         uses: sonarsource/sonarcloud-github-action@v5.0.0
+        with:
+          projectBaseDir: src/
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
