--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,10 @@
 sonar.organization=pagopa
 sonar.projectKey=pagopa-anonymizer
 
-# relative paths to source directories. More details and properties are described
-# at https://docs.sonarsource.com/sonarqube-cloud/advanced-setup/analysis-scope/
-sonar.sources=.
+sonar.language=py
+sonar.python.version=3.11
+sonar.core.codeCoveragePlugin=cobertura
+sonar.python.coverage.reportPaths=coverage.xml
+sonar.verbose=true
+sonar.sources=src/
+sonar.tests=test/
