--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -38,6 +38,34 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.11' # Sostituisci con la tua versione Python
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest pytest-cov coverage
+
+      - name: Run tests and generate coverage report
+        run: |
+          pytest -v  --cov --cov-report=xml --cov-report=html
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v5.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          # Opzionale: definisci qui projectKey e organization se non sono nel sonar-project.properties
+          # args: >
+          #   -Dsonar.projectKey=tuo_project_key
+          #   -Dsonar.organization=tua_organization_key
+          #   -Dsonar.python.coverage.reportPaths=coverage.xml # Già di default per Python ma esplicito è meglio
+          pass
+
       - name: SonarQube Scan
         uses: sonarsource/sonarcloud-github-action@v5.0.0
         with:
