--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -17,9 +17,6 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-env:
-  PROJECT_KEY: pagopa_pagopa-anonymizer
-
 permissions:
   id-token: write
   contents: read
@@ -65,7 +62,10 @@ jobs:
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v5.2.0
         with:
-          projectBaseDir: src/
+          args: >
+            -Dsonar.pullrequest.key=${{ github.event.pull_request.number }}
+            -Dsonar.pullrequest.branch=${{ github.head_ref }}
+            -Dsonar.pullrequest.base=${{ github.base_ref }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
