--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -63,9 +63,9 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v5.2.0
         with:
           args: >
-            -Dsonar.pullrequest.key=${{ github.event.pull_request.number }}
-            -Dsonar.pullrequest.branch=${{ github.head_ref }}
-            -Dsonar.pullrequest.base=${{ github.base_ref }}
+            -Dsonar.pullrequest.key=2
+            -Dsonar.pullrequest.branch=github-actions
+            -Dsonar.pullrequest.base=main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
