--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -7,40 +7,34 @@ microservice-chart:
     tag: "0.0.1"
     pullPolicy: Always
   livenessProbe:
-    httpGet: # TODO
+    httpGet:
       path: /info
-      port: 80
+      port: 5000
     initialDelaySeconds: 60
     failureThreshold: 6
     periodSeconds: 10
   readinessProbe:
-    httpGet: # TODO
+    httpGet:
       path: /info
-      port: 80
+      port: 5000
     initialDelaySeconds: 60
     failureThreshold: 6
     periodSeconds: 10
   deployment:
     create: true
   serviceMonitor:
-    create: true
-    endpoints:
-      - interval: 10s #jmx-exporter
-        targetPort: 12345
-        path: /metrics
+    create: false
   ports:
-    - 80 #http
-    - 12345 #jmx-exporter
+    - 5000 #http
   service:
     type: ClusterIP
     ports:
-      - 80 #http
-      - 12345 #jmx-exporter
+      - 5000 #http
   ingress:
     create: true
     host: "weudev.shared.internal.dev.platform.pagopa.it"
     path: /pagopa-anonymizer/(.*)
-    servicePort: 80
+    servicePort: 5000
   serviceAccount:
     name: "shared-workload-identity"
   azure:
