--- a/.github/workflows/anchore.yml
+++ b/.github/workflows/anchore.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           image: "localbuild/testimage:latest"
           acs-report-enable: true
-          fail-build: true
+          fail-build: false
           severity-cutoff: "high"
       - name: Upload Anchore Scan Report
         uses: github/codeql-action/upload-sarif@b8d3b6e8af63cde30bdc382c0bc28114f4346c88 # v2
