--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -4,7 +4,7 @@ microservice-chart:
   fullnameOverride: "pagopa-anonymizer"
   image:
     repository: ghcr.io/pagopa/pagopa-anonymizer
-    tag: "0.0.1"
+    tag: "latest"
     pullPolicy: Always
   livenessProbe:
     httpGet:
@@ -22,6 +22,7 @@ microservice-chart:
     periodSeconds: 10
   deployment:
     create: true
+    replicas: 1
   serviceMonitor:
     create: false
   ports:
@@ -50,7 +51,7 @@ microservice-chart:
       memory: "512Mi"
       cpu: "0.25"
     limits:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "0.50"
   autoscaling:
     enable: true
@@ -67,7 +68,8 @@ microservice-chart:
   envConfig:
     ENV: "dev"
     WEBSITE_SITE_NAME: "pagopa-anonymizer" # required to show cloud role name in application insights
-    FUNCTIONS_WORKER_RUNTIME: "python"
+  envSecret:
+    APPLICATION_INSIGHTS_CONNECTION_STRING: ai-d-connection-string
   keyvault:
     name: "pagopa-d-shared-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
@@ -101,3 +103,4 @@ microservice-chart:
         pullPolicy: Always
       envConfig:
       envSecret:
+
