--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -9,14 +9,14 @@ microservice-chart:
   livenessProbe:
     httpGet:
       path: /info
-      port: 5000
+      port: 3000
     initialDelaySeconds: 60
     failureThreshold: 6
     periodSeconds: 10
   readinessProbe:
     httpGet:
       path: /info
-      port: 5000
+      port: 3000
     initialDelaySeconds: 60
     failureThreshold: 6
     periodSeconds: 10
@@ -26,16 +26,17 @@ microservice-chart:
   serviceMonitor:
     create: false
   ports:
-    - 5000 #http
+    - 3000 #http
   service:
+    create: true
     type: ClusterIP
     ports:
-      - 5000 #http
+      - 3000 #http
   ingress:
     create: true
     host: "weudev.shared.internal.dev.platform.pagopa.it"
     path: /pagopa-anonymizer/(.*)
-    servicePort: 5000
+    servicePort: 3000
   serviceAccount:
     name: "shared-workload-identity"
   azure:
@@ -51,7 +52,7 @@ microservice-chart:
       memory: "512Mi"
       cpu: "0.25"
     limits:
-      memory: "1Gi"
+      memory: "2Gi"
       cpu: "0.50"
   autoscaling:
     enable: true
