--- a/.github/workflows/release_deploy.yml
+++ b/.github/workflows/release_deploy.yml
@@ -110,17 +110,43 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@ee0669bd1cc54295c223e0bb666b733df41de1c5 # v2
+
+      - id: get_version
+        name: Get Version
+        run: |
+          SETUP_FILE="setup.cfg"
+          if [[ -f "$SETUP_FILE" ]]; then
+            echo "version=$(awk -F ' *= *' '/^\[metadata\]/{f=1} f && /^version/{print $2; exit}' setup.cfg)" >> $GITHUB_ENV
+          fi
+        shell: bash
+
+      - name: Bump Version
+        id: bump_version
+        uses: pagopa/github-actions-template/bump-semver@v1
+        with:
+          semver: ${{ needs.setup.outputs.semver}}
+          current_version: ${{ steps.get_version.outputs.version }}
+
+      - name: Update Version
+        shell: bash
+        run: sed -i "/^\[metadata\]/,/^\s*\[/{s/^\(version\s*=\s*\).*/\1${{ steps.bump_version.outputs.new_version }}/}" setup.cfg
+
+      - name: Helm Bump
+        uses: pagopa/github-actions-template/helm-bump@main
+        with:
+          version: ${{ steps.bump_version.outputs.new_version }}
+          beta: ${{ inputs.beta }}
+
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@0cb9c9b65d5d1901c1f53e5e66eaf4afd303e70e # v1
+        uses: ncipollo/release-action@a2e71bdd4e7dab70ca26a852f29600c98b33153e # v1.12.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
-          body: ""
-          draft: false
-          prerelease: false
+          commit: true
+          tag: ${{ steps.bump_version.outputs.new_version }}
+          name: Release ${{ steps.bump_version.outputs.new_version }}
+          makeLatest: true
+          generateReleaseNotes: true
 
   image:
     needs: [ setup, release ]
