--- a/.github/workflows/release_deploy.yml
+++ b/.github/workflows/release_deploy.yml
@@ -142,7 +142,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          commit: true
+          commit: ${{ (inputs.semver != 'skip' && github.ref_name) || '' }}
           tag: ${{ steps.bump_version.outputs.new_version }}
           name: Release ${{ steps.bump_version.outputs.new_version }}
           makeLatest: true
