--- a/.github/workflows/release_deploy.yml
+++ b/.github/workflows/release_deploy.yml
@@ -91,7 +91,7 @@ jobs:
         run: echo "semver=${{env.SEMVER}}" >> $GITHUB_OUTPUT
 
       # Set Environment
-      - run: echo "ENVIRNOMENT=${{ inputs.environment}}" >> $GITHUB_ENV
+      - run: echo "ENVIRNOMENT=${{ inputs.environment }}" >> $GITHUB_ENV
 
       - if: ${{ inputs.environment == null }}
         run: echo "ENVIRNOMENT=dev" >> $GITHUB_ENV
@@ -105,8 +105,9 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     needs: [ setup ]
+    if: ${{ needs.setup.outputs.semver != 'skip' }}
     outputs:
-      version: ${{ steps.release.outputs.version }}
+      version: ${{ steps.bump_version.outputs.new_version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@ee0669bd1cc54295c223e0bb666b733df41de1c5 # v2
@@ -115,9 +116,12 @@ jobs:
         name: Get Version
         run: |
           SETUP_FILE="setup.cfg"
+          CURRENT_VERSION=""
           if [[ -f "$SETUP_FILE" ]]; then
-            echo "version=$(awk -F ' *= *' '/^\[metadata\]/{f=1} f && /^version/{print $2; exit}' setup.cfg)" >> $GITHUB_ENV
+            CURRENT_VERSION=$(awk -F ' *= *' '/^\[metadata\]/{f=1} f && /^version/{print $2; exit}' setup.cfg)
           fi
+          echo "version=${CURRENT_VERSION}" >> $GITHUB_OUTPUT
+          echo "DEBUG: Current version from setup.cfg = ${CURRENT_VERSION}"
         shell: bash
 
       - name: Bump Version
@@ -127,9 +131,17 @@ jobs:
           semver: ${{ needs.setup.outputs.semver}}
           current_version: ${{ steps.get_version.outputs.version }}
 
+      - name: Log Bump Version Output
+        run: |
+          echo "DEBUG: Bump Version Output"
+          echo "  new_version: ${{ steps.bump_version.outputs.new_version }}"
+          echo "  old_version: ${{ steps.bump_version.outputs.old_version }}"
+
       - name: Update Version
         shell: bash
-        run: sed -i "/^\[metadata\]/,/^\s*\[/{s/^\(version\s*=\s*\).*/\1${{ steps.bump_version.outputs.new_version }}/}" setup.cfg
+        run: |
+          echo "DEBUG: Updating setup.cfg with version ${{ steps.bump_version.outputs.new_version }}"
+          sed -i "/^\[metadata\]/,/^\s*\[/{s/^\(version\s*=\s*\).*/\1${{ steps.bump_version.outputs.new_version }}/}" setup.cfg
 
       - name: Helm Bump
         uses: pagopa/github-actions-template/helm-bump@main
@@ -137,12 +149,30 @@ jobs:
           version: ${{ steps.bump_version.outputs.new_version }}
           beta: ${{ inputs.beta }}
 
+      - name: DEBUG ncipollo/release-action inputs
+        run: |
+          echo "DEBUG: Inputs for ncipollo/release-action:"
+          echo "  commit (evaluated): ${{ (inputs.version != 'skip_or_promote' && github.ref_name) || '' }}"
+          # Nota: l'espressione originale era (inputs.semver != 'skip' && github.ref_name) || ''
+          # 'inputs.semver' non è un input definito per workflow_dispatch, ma 'inputs.version' sì.
+          # 'skip_or_promote' è un valore di 'inputs.version'.
+          # Se l'intento è usare il semver calcolato nel job 'setup', allora dovrebbe essere needs.setup.outputs.semver
+          # Se l'intento è usare github.sha, si può omettere 'commit' e l'action usa il default (github.sha).
+          echo "  (raw expression for commit used: (inputs.semver != 'skip' && github.ref_name) || '' )"
+          echo "  (workflow input 'version': ${{ inputs.version }})"
+          echo "  (github.ref_name: ${{ github.ref_name }})"
+          echo "  (evaluated needs.setup.outputs.semver: ${{ needs.setup.outputs.semver }})"
+          echo "  tag: ${{ steps.bump_version.outputs.new_version }}"
+          echo "  name: Release ${{ steps.bump_version.outputs.new_version }}"
+          echo "  makeLatest: true"
+          echo "  generateReleaseNotes: true"
+          echo "  GITHUB_TOKEN: (is set, not printing value for security)"
+
       - name: Create Release
         uses: ncipollo/release-action@a2e71bdd4e7dab70ca26a852f29600c98b33153e # v1.12.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          commit: ${{ (inputs.semver != 'skip' && github.ref_name) || '' }}
           tag: ${{ steps.bump_version.outputs.new_version }}
           name: Release ${{ steps.bump_version.outputs.new_version }}
           makeLatest: true
@@ -154,8 +184,17 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ needs.setup.outputs.semver != 'skip' }}
     steps:
+      - name: DEBUG pagopa/ghcr-build-push inputs
+        run: |
+          echo "DEBUG: Inputs for pagopa/github-actions-template/ghcr-build-push:"
+          echo "  github_token: (is set, not printing value for security)"
+          echo "  tag: ${{ needs.release.outputs.version }}"
+          # Aggiungiamo altri input che potrebbero essere rilevanti o che l'azione potrebbe aspettarsi con valori di default
+          echo "  image_name: (default, not specified - usually <owner>/<repo>)"
+          echo "  dockerfile: (default, not specified - usually Dockerfile)"
+          echo "  build_context: (default, not specified - usually .)"
+
       - name: Build and Push
-        id: semver
         uses: pagopa/github-actions-template/ghcr-build-push@d91a1fd0b913c9830589be5d86cdb71c90813fae # v1.5.4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
