--- a/.github/workflows/release_deploy.yml
+++ b/.github/workflows/release_deploy.yml
@@ -149,6 +149,15 @@ jobs:
           version: ${{ steps.bump_version.outputs.new_version }}
           beta: ${{ inputs.beta }}
 
+      - name: Push New Version ${{ steps.bump_version.outputs.new_version }}
+        shell: bash
+        run: |
+          git ls-files . | grep 'pom.xml'  | xargs git add
+          git config --global user.email "github-bot@pagopa.it"
+          git config --global user.name "pagopa-github-bot"
+          git commit -m "Bump to version ${{ steps.bump_version.outputs.new_version }}" || exit 0
+          git push origin ${{ github.ref_name}}
+
       - name: DEBUG ncipollo/release-action inputs
         run: |
           echo "DEBUG: Inputs for ncipollo/release-action:"
