--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,8 @@ cython_debug/
 
 .idea/
 .vscode/
-/.identity/.terraform/
-/.repository/.terraform/
-/infra/.terraform/
+.identity/.terraform/
+.repository/.terraform/
+infra/.terraform/
+helm/Chart.lock
+helm/charts/
