--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -70,7 +70,7 @@ microservice-chart:
     ENV: "uat"
     WEBSITE_SITE_NAME: "pagopa-anonymizer" # required to show cloud role name in application insights
   envSecret:
-    APPLICATION_INSIGHTS_CONNECTION_STRING: ai-d-connection-string
+    APPLICATION_INSIGHTS_CONNECTION_STRING: ai-u-connection-string
   keyvault:
     name: "pagopa-u-shared-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
