chore: [PAGOPA-3105] Update performance pipeline

--- a/.devops/performance-test-pipelines.yml
+++ b/.devops/performance-test-pipelines.yml
@@ -33,7 +33,7 @@ variables:
   ${{ if eq(parameters['ENVIRONMENT'], 'dev') }}:
     subscriptionKey: "$(DEV_SUBSCRIPTION_KEY)"
     poolImage: 'pagopa-dev-loadtest-linux'
-  ${{ if eq(parameters['ENVIRONMENT'], 'uat_java') }}:
+  ${{ if eq(parameters['ENVIRONMENT'], 'uat') }}:
     subscriptionKey: "$(UAT_SUBSCRIPTION_KEY)"
     poolImage: 'pagopa-uat-loadtest-linux'
 
