--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -40,7 +40,7 @@ microservice-chart:
   serviceAccount:
     name: "shared-workload-identity"
   azure:
-    workloadIdentityClientId: "TODO"
+    workloadIdentityClientId: "152e401f-314d-4be1-9510-c74d27997cbc"
   podAnnotations: {}
   podSecurityContext:
     seccompProfile:
