--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -69,6 +69,7 @@ microservice-chart:
   envConfig:
     ENV: "prod"
     WEBSITE_SITE_NAME: "pagopa-anonymizer" # required to show cloud role name in application insights
+    APP_LOGGING_LEVEL: 'INFO'
   envSecret:
     APPLICATION_INSIGHTS_CONNECTION_STRING: ai-p-connection-string
   keyvault:
