--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -3,7 +3,7 @@ name: pagopa-anonymizer
 description: Microservice to anonymize PII
 type: application
 version: 0.33.0
-appVersion: ""
+appVersion: "0.2.2-24-PAGOPA-3137-setup-logging-kibana"
 dependencies:
   - name: microservice-chart
     version: 7.5.0
