--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -4,7 +4,7 @@ microservice-chart:
   fullnameOverride: "pagopa-anonymizer"
   image:
     repository: ghcr.io/pagopa/pagopa-anonymizer
-    tag: ""
+    tag: "0.2.2-24-PAGOPA-3137-setup-logging-kibana"
     pullPolicy: Always
   livenessProbe:
     httpGet:
