--- a/.github/workflows/release_deploy.yml
+++ b/.github/workflows/release_deploy.yml
@@ -128,50 +128,48 @@ jobs:
 
       - name: Bump Version
         id: bump_version
-        uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # v6.3.3
         env:
           CURRENT_VERSION: ${{ steps.get_version.outputs.version }}
           SEMVER: ${{ needs.setup.outputs.semver }}
-        with:
-          result-encoding: string
-          script: |
-            var { CURRENT_VERSION, SEMVER } = process.env
-            var versions = CURRENT_VERSION.replace('v','').split('.');
-            
-            if (${{ github.ref_name != 'main' }}) {
-              var branch = "${{github.ref_name}}"
-            }
-            
-            var v0 = versions[0] ?? '0';
-            var v1 = versions[1] ?? '0';
-            var vaux = (versions[2] ?? '0');
-            var v2 = vaux.split('-')[0] ?? '0';
-            var v3 = vaux.split('-')[1] ?? '0';
-            
-            var major = parseInt(v0) || 0;
-            var minor = parseInt(v1) || 0;
-            var patch = parseInt(v2) || 0;
-            var buildNumber = parseInt(v3) || 0;
-            
-            var newVersion = "";
-            
-            if (SEMVER == 'major'){
-              newVersion = (major + 1) + '.0.0' 
-            }
-            if (SEMVER == 'minor'){
-              newVersion = major.toString() + '.' + (minor + 1) + '.0' 
-            } 
-            if (SEMVER == 'patch'){
-              newVersion = major.toString() + '.' + minor.toString() + '.' + (patch + 1)
-            }
-            if (SEMVER == 'buildNumber'){
-              newVersion = major.toString() + '.' + minor.toString() + '.' + patch.toString() + '-' + (buildNumber + 1) + '-' + branch
-            }
-            if (SEMVER == 'skip'){
-              newVersion = CURRENT_VERSION
-            }
-            console.log('new version: ' + newVersion);
-            echo "new_version=newVersion" >> $GITHUB_OUTPUT
+        shell: bash
+        run: |
+          var { CURRENT_VERSION, SEMVER } = process.env
+          var versions = CURRENT_VERSION.replace('v','').split('.');
+          
+          if (${{ github.ref_name != 'main' }}) {
+            var branch = "${{github.ref_name}}"
+          }
+          
+          var v0 = versions[0] ?? '0';
+          var v1 = versions[1] ?? '0';
+          var vaux = (versions[2] ?? '0');
+          var v2 = vaux.split('-')[0] ?? '0';
+          var v3 = vaux.split('-')[1] ?? '0';
+          
+          var major = parseInt(v0) || 0;
+          var minor = parseInt(v1) || 0;
+          var patch = parseInt(v2) || 0;
+          var buildNumber = parseInt(v3) || 0;
+          
+          var newVersion = "";
+          
+          if (SEMVER == 'major'){
+            newVersion = (major + 1) + '.0.0' 
+          }
+          if (SEMVER == 'minor'){
+            newVersion = major.toString() + '.' + (minor + 1) + '.0' 
+          } 
+          if (SEMVER == 'patch'){
+            newVersion = major.toString() + '.' + minor.toString() + '.' + (patch + 1)
+          }
+          if (SEMVER == 'buildNumber'){
+            newVersion = major.toString() + '.' + minor.toString() + '.' + patch.toString() + '-' + (buildNumber + 1) + '-' + branch
+          }
+          if (SEMVER == 'skip'){
+            newVersion = CURRENT_VERSION
+          }
+          console.log('new version: ' + newVersion);
+          echo "new_version=${newVersion}" >> $GITHUB_OUTPUT
 
       - name: Update Version
         shell: bash
