--- a/.github/workflows/release_deploy.yml
+++ b/.github/workflows/release_deploy.yml
@@ -140,6 +140,8 @@ jobs:
           # Split version for .
           IFS='.' read -r v0 v1 vaux <<< "$version"
           
+          echo "vaux vaux"
+          
           # Split v0 for .
           IFS='-' read -r v2 v3 <<< "${vaux:-0}"
           
@@ -147,6 +149,10 @@ jobs:
           minor=${v1:-0}
           patch=${v2:-0}
           buildNumber=${v3:-0}
+          echo "major $major"
+          echo "minor minor"
+          echo "patch patch"
+          echo "buildNumber buildNumber"
           
           branch_suffix=""
           if [ "$BRANCH" != "main" ]; then
